--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lib",
     "src"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/3794/redux-router-menu.git"
+  },
   "authors": "Hyo <3794hyo@gmail.com> (https://github.com/3794)",
   "license": "MIT",
   "scripts": {
